# todo

./: .gitignore  Dockerfile  README.md  backup.conf  config.env  deployment_script.sh  docker-compose-overide.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: devops-test.yml  frontend-speed.yml  hello-devops.yml  hello-devops.yml.bak  main.yml  python-check.yml  python-check.yml.bak  qa-nightly.yml  reusable-docker.yml.bak  rollback.yml.bak
.github/workflows/test_workflows/: matrix-test.yml
backend/: Dockerfile
backend/src/config/: crud.py  database.py  dependencies.py  main.py  model.py  schema.py  security.py
backend/tests/: conftest.py  test_main.py
configs/: app-config.yml  broken.yml  database.yml  environments.yml
frontend/: Dockerfile  api_client.py  requirements.txt  todo_UI_main.py
